--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="row my-2">
-    <div class="col">{{ users }}</div>
+    <div class="col" id="user_list">{{ users }}</div>
 
     <div class="col">no incomes</div>
 </div>
