--- a/project/users/templates/users/includes/unnecessary.html
+++ b/project/users/templates/users/includes/unnecessary.html
@@ -1,5 +1,5 @@
-<form method="POST" novalidate id="js-form" class="js-form" autocomplete="off" tabindex="-1" data-update-container="unnecessary_ajax" action="{% url 'users:settings_unnecessary' %}">
+<form method="POST" novalidate class="js_unnecessary_form" autocomplete="off" tabindex="-1" data-update-container="unnecessary_ajax" action="{% url 'users:settings_unnecessary' %}">
     {% csrf_token %}
     {% include 'core/includes/form.html' %}
-    <button type="button" class="btn btn-sm btn-primary" id="submit12">Update</button>
+    <button type="button" class="btn btn-sm btn-primary" id="unnecessary_submit">Update</button>
 </form>
