--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -10,7 +10,10 @@
 
 <div class="row my-2">
     <div class="col" id="user_list">
-        <h6 class="pb-2">Users</h6>
+        <div class="row">
+            <div class="col"><h6 class="pb-2">Users</h6></div>
+            <div class="col text-end"><a role="button" class="btn btn-sm btn-primary js-invite" data-url="{% url 'users:invite' %}">Sent invite link</a></div>
+        </div>
         {{ users }}
     </div>
 
