--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -1,25 +1,38 @@
 {% extends 'base.html' %}
 
-{% block head %}{% endblock head %}
+{% block head %}
+<style>
+    .settings_row {
+        background-color: aliceblue;
+        margin: 0.5rem 0;
+        padding: 0!important;
+    }
+    .settings_row .btn-sm {
+        margin: 0.2rem 0;
+    }
+</style>
+{% endblock head %}
 
 {% block content %}
 
-<div class="row my-2 mx-0">
+<div class="row mt-2 mx-0">
     <div class="col text-center bg-light"><h6 class="pt-1 pb-2">Settings</h6></div>
 </div>
 
-<div class="row my-2">
-    <div class="col" id="user_list">
-        <div class="row">
+<div class="row">
+    <div class="col">
+        <div class="row settings_row">
             <div class="col"><h6 class="pb-2">Users</h6></div>
-            <div class="col text-end"><a role="button" class="btn btn-sm btn-primary js-invite" data-url="{% url 'users:invite' %}">Sent invite link</a></div>
+            <div class="col text-end pe-0 me-2"><a role="button" class="btn btn-sm btn-primary js-invite" data-url="{% url 'users:invite' %}">Sent invite link</a></div>
         </div>
-        {{ users }}
+        <div id="user_list" class="mt-3">{{ users }}</div>
     </div>
 
     <div class="col">
-        <h6 class="pb-2">Nebūtinos išlaidos</h6>
-        <div id="unnecessary_ajax">{{ unnecessary }}</div>
+        <div class="row settings_row">
+            <div class="col"><h6 class="pb-2">Nebūtinos išlaidos</h6></div>
+        </div>
+        <div id="unnecessary_ajax" class="mt-3">{{ unnecessary }}</div>
     </div>
 </div>
 
