--- a/project/core/templates/core/includes/generic_formset.html
+++ b/project/core/templates/core/includes/generic_formset.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags %}{% load i18n %}
 
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}"
     autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}">
@@ -7,7 +7,7 @@
 
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% translate 'Close' %}"></button>
     </div>
     <div class="modal-body">
         {% for form in formset.forms %}
