--- a/project/core/templates/core/includes/generic_modal.html
+++ b/project/core/templates/core/includes/generic_modal.html
@@ -1,10 +1,11 @@
+{% load i18n %}
 <div class="modal-header">
     <h5 class="modal-title">{{ title }}</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% translate 'Close' %}"></button>
 </div>
 <div class="modal-body">
     <p class="py-0 my-4">{{ text }}</p>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">{% translate 'Close' %}</button>
 </div>
