--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags %}{% load i18n %}
 
 <form novalidate method="post" id="search_form" class="row d-flex gx-1 align-items-center">
     {% csrf_token %}
@@ -6,6 +6,6 @@
         {{ form.search|as_crispy_field }}
     </div>
     <div class="col-auto align-self-start">
-        <input type="submit" name="search" value="Search" id="search_btn" class="btn btn-secondary btn-sm search_click text-center w5" data-url="{{ url }}">
+        <input type="submit" name="search" value="{% translate 'Search' %}" id="search_btn" class="btn btn-secondary btn-sm search_click text-center w5" data-url="{{ url }}">
     </div>
 </form>
