--- a/project/templates/modal_images.html
+++ b/project/templates/modal_images.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="modal fade" id="imgModal" tabindex="-1" aria-labelledby="imgModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -5,7 +6,7 @@
                 <div class="dspl text-center"></div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% translate 'Close' %}"></button>
             </div>
         </div>
     </div>
