expense type necessary checkinput css tweak

--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -15,6 +15,10 @@
     .accordion-body .expenses-edit-icon {
         top: .25rem;
     }
+
+    .form-check-input.necessary_check {
+        margin-left: 0;
+    }
 </style>
 
 {% endblock head %}
