--- a/project/incomes/templates/incomes/includes/incomes_delete_form.html
+++ b/project/incomes/templates/incomes/includes/incomes_delete_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_delete_form title='Pajamų trinimas' update_container='ajax-content' %}
+{% load i18n %}
+
+{% generic_delete_form title=_('Delete incomes') update_container='ajax-content' %}
