--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -1,15 +1,16 @@
 {% load humanize %}
+{% load i18n %}
 
 {% if items %}
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>Data</th>
-            <th>Pajamų rūšis</th>
-            <th>Sąskaita</th>
-            <th>Pastaba</th>
-            <th class="text-end">Suma</th>
+            <th>{% translate 'Date' %}</th>
+            <th>{% translate 'Incomes type' %}</th>
+            <th>{% translate 'Account' %}</th>
+            <th>{% translate 'Remark' %}</th>
+            <th class="text-end">{% translate 'Amount' %}</th>
             <th colspan="2"></th>
          </tr>
     </thead>
@@ -26,10 +27,10 @@
             <td class="text-start">{{ item.remark }}</td>
             <td>{{ item.price|intcomma }}</td>
             <td class="w-edit">
-                <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
+                <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
             </td>
             <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
         {% endfor %}
