--- a/project/incomes/templates/incomes/includes/incomes_type_form.html
+++ b/project/incomes/templates/incomes/includes/incomes_type_form.html
@@ -1,2 +1,3 @@
 {% load form %}
-{% generic_form title='Pajamų rūšis' update_container='ajax-content-categories' %}
+{% load i18n %}
+{% generic_form title=_('Incomes type') update_container='ajax-content-categories' %}
