--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %}{% load static %}
+{% extends 'base.html' %}
 
+{% load static %}
+{% load i18n %}
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/css-loader.css' %}">
@@ -23,7 +25,7 @@
         <div class="row my-2">
             <div class="col" id="search_form_data">{{ search }}</div>
             <div class="col-auto text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create w5" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>Pajamas</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create w5" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>{% translate 'Incomes' context 'incomes button' %}</button>
             </div>
         </div>
         <div class="row">
@@ -34,7 +36,7 @@
     <div class="col-lg-4">
         <div class="row my-2">
             <div class="col-lg-12 text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>Pajamų rūšį</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>{% translate 'Incomes type' context 'income type button' %}</button>
             </div>
         </div>
 
