--- a/project/accounts/templates/accounts/includes/accounts_form.html
+++ b/project/accounts/templates/accounts/includes/accounts_form.html
@@ -1,2 +1,3 @@
 {% load form %}
-{% generic_form title='Sąskaitos' update_container='ajax-content-categories' %}
+{% load i18n %}
+{% generic_form title=_('Account') update_container='ajax-content-categories' %}
