--- a/project/transactions/templates/transactions/includes/savings_close_form.html
+++ b/project/transactions/templates/transactions/includes/savings_close_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_form title='Fondas &rArr; Sąskaita' update_container='savings_close_list' %}
+{% load i18n %}
+
+{% generic_form title=_('Fund &rArr; Account') update_container='savings_close_list' %}
