--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% block head %}{% endblock head %}
 
 
@@ -10,11 +12,11 @@
         <!-- transactins between accounts -->
         <div class="row my-2">
             <div class="col">
-                <h6>Sąskaita &hArr; Sąskaita</h6>
+                <h6>{% translate 'Account &hArr; Account' %}</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:transactions_new' as url_transactions %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> {% translate 'Record' context 'record button' %}</button>
             </div>
         </div>
         <div class="row">
@@ -24,11 +26,11 @@
         <!-- close savings -->
         <div class="row my-2">
             <div class="col">
-                <h6>Fondas &rArr; Sąskaita</h6>
+                <h6>{% translate 'Fund &rArr; Account' %}</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:savings_close_new' as url_savings_close %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> {% translate 'Record' context 'record button' %}</button>
             </div>
         </div>
         <div class="row">
@@ -38,11 +40,11 @@
         <!-- change savings -->
         <div class="row my-2">
             <div class="col">
-                <h6>Fondas &hArr; Fondas</h6>
+                <h6>{% translate 'Fund &hArr; Fund' %}</h6>
             </div>
             <div class="col text-end">
                 {% url 'transactions:savings_change_new' as url_savings_change %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> {% translate 'Record' context 'record button' %}</button>
             </div>
         </div>
         <div class="row">
@@ -55,7 +57,7 @@
         <div class="row my-2">
             <div class="col text-end">
                 {% url 'accounts:accounts_new' as url_accounts %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> {% translate 'Account' context 'account button' %}</button>
             </div>
         </div>
         <div class="row">
